add_executable(bitOperator bitOperator.cpp)
add_executable(func_rec func_rec.cpp) 
add_executable(share_ptr share_ptr.cpp)
add_executable(io_operation io_operation.cpp) 
add_executable(vectorMemory vectorMemory.cpp)
add_executable(intstarstar intstarstar.cpp)
add_executable(valueLimits valueLimits.cpp)
add_executable(perfectforward perfectforward.cpp)
add_executable(VariableParameter VariableParameter.cpp)